# AUTO-BOT-LBC-PJ2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
app/: boundaries.py  config.py  db.py  main.py  models.py  tables.py  tasks.py  ws.py
app/api/: accounts.py  analyzer.py  campaigns.py  dashboard.py  health.py  listings.py
app/services/: account_creation.py  anthropic_tracker.py  balance_poller.py  blacklist.py  campaign_runner.py  listing_persistence.py  phone_extractor.py  scraper.py  vehicle_analyzer.py  warm_up.py
app/webhooks/: call.py  debug.py  email.py  funds.py  sms.py
docs/: Plan_Implementation_Modules.html
front/: next.config.ts  package.json
front/app/: layout.tsx
front/app/accounts/: page.tsx
front/app/analyzer/: page.tsx
front/app/campaigns/: page.tsx
front/app/dashboard/: page.tsx
front/app/listings/: page.tsx
front/components/: IncomingCallAlert.tsx  NavLinks.tsx  PriceScoreBadge.tsx
front/lib/: api.ts  websocket.ts
front/tests/: components.test.tsx  handlers.ts  setup.ts
migrations/: env.py
migrations/versions/: 7f3a8b2e1d4c_initial_schema.py  a2c1d4e8f3b9_service_balance_expires_at.py  b3d2e5f9a1c7_add_service_balance.py
scripts/: deploy.sh  start.sh  verify_server.sh
tests/: conftest.py  test_account_creation.py  test_boundaries.py  test_campaign_runner.py  test_health.py  test_listing_persistence.py  test_scraper.py  test_vehicle_analyzer.py  test_warm_up.py  test_webhooks.py
