[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-bot-lbc-pj2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.30",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # Scraping / anti-detection
    "crawl4ai>=0.4.0",
    "scrapling>=0.2.0",
    "patchright>=1.44.0",
    # AI — analyse véhicules
    "anthropic>=0.40.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "unit: tests unitaires (pas de I/O réelle)",
    "integration: tests nécessitant DB + Redis réels",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
